--- a/src/app/(home)/blog/hello-world/page.mdx
+++ b/src/app/(home)/blog/hello-world/page.mdx
@@ -2,7 +2,7 @@
 
 Lorem markdownum, sinuatoque caede arcanaque sibi **victos**, sum pisa fugio pluribus findit. Sua iungit sinit, non, sibi iam genetrice Pallante tenent voce: non. Lesbon sua **mutata**, genitoris humo herbosa lentus cruentatus taurus, modo aethera et quam quid **libatos ebibit** suae! Avulsa multa quicquid, donare committit membris minoribus cum manus ad et.
 
-Ludere cum linguam locis; cum commune Curetas, pudoris. Est huc timidi plenissima ferar ipsum vanum carmina modo deos bracchia silva contingere ubi nexibus.
+Ludere cum [linguam](https://example.com) locis; cum commune Curetas, pudoris. Est huc timidi plenissima ferar ipsum vanum carmina modo deos bracchia silva contingere ubi nexibus.
 
 - Dixit mugitus est
 - Puellari ensis sustinuere sanguinis
